# gdlog-multinode

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  README.md
docker/: runpod.Dockerfile
frontend/: gdlog_ir.rkt  ram2gdlog.rkt  souffle_ir.md  souffle_ir.rkt
include/: ast.h  builtin.h  chisa.h  comm.h  hashtrie.cuh  hisa.cuh  lie.cuh  mir.h  print.cuh  relation.cuh  relational_algebra.cuh  rt_incl.h  string_hash.h  tokenizer.h  tuple.cuh  utils.h
script/: compute_rel.py  polaris-job.10.out  polaris_affinity.sh  polaris_env.sh  polaris_job.sh  verbose
script/runpod/: nginx.conf  start.sh
src/: acopy.cu  arithm.cu  ast.cpp  broadcast.cu  cartesian.cu  chisa.cu  comm.cu  copy.cu  filter.cu  hashtrie.cu  hisa.cu  join.cu  lie.cu  mir.cpp  negation.cu  print.cu  relation.cu  rt.cpp  tokenizer.cpp  tuple.cu  union.cu
src/ra/: acopy.cu  arithm.cu  cartesian.cu  copy.cu  filter.cu  join.cu  negation.cu  union.cu
test/: block_overlap.cu  cspa.cu  cspa2.cu  data_test.cu  sg.cu  sort.cu  tc.cu  test.cu  value_analysis.cu  value_analysis_debug.cu
test/data_distribution/: bin_histogram.py
test/slog/: sym.mir  sym.slog
test/souffle/: cspa  cspa.cpp  cspa.dl  cspa.opt  cspa.opt.ra-mir-1  cspa.opt.ram  cspa.ram.inital  cspa.schedule.ram  debug  pp  sg.dl  sym.dl  tc.ram  tc2.dl  tc2.ram  test.ss  x86.ram
test/souffle/ddisasm/: block_overlap.dl  intern.dl  rename.py  test.dl  value_analysis.dl  value_analysis.slog  value_analysis.slogc  value_analysis_full.dl  value_analysis_non_recur.dl  value_limit.dl
unittest/: CMakeLists.txt
unittest/src/: comm_test.cu  compiler_test.cpp  ra_test.cu  string_test.cu  tc_test.cu  util.h
